--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.10",
+    "swiper": "^10.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
